Fix swagger
