# swagger.json
@@ -11,12 +11,10 @@
   },
   "host": "mighty-gorge-25136.herokuapp.com",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Users",
-      "description": "API for users in the system"
-    }
-  ],
+  "tags": [{
+    "name": "Users",
+    "description": "API for users in the system"
+  }],
   "schemes": [
     "https"
   ],
@@ -53,26 +51,24 @@
         "produces": [
           "application/json"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userName": {
-                  "type": "string",
-                  "example": "aa"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "aa"
-                }
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "userName": {
+                "type": "string",
+                "example": "aa"
+              },
+              "password": {
+                "type": "string",
+                "example": "aa"
               }
             }
           }
-        ],
+        }],
         "responses": {
           "200": {
             "description": "OK",
@@ -117,26 +113,24 @@
         "tags": [
           "members"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userName": {
-                  "type": "string",
-                  "example": "aa"
-                },
-                "password": {
-                  "type": "string",
-                  "example": "aa"
-                }
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "userName": {
+                "type": "string",
+                "example": "aa"
+              },
+              "password": {
+                "type": "string",
+                "example": "aa"
               }
             }
           }
-        ],
+        }],
         "responses": {
           "200": {
             "description": "User is updated",
@@ -181,34 +175,32 @@
         "tags": [
           "posts"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "todo": {
-                  "type": "string",
-                  "example": "aa"
-                },
-                "date": {
-                  "type": "date",
-                  "example": "2018-10-30"
-                },
-                "priority": {
-                  "type": "integer",
-                  "example": 1
-                },
-                "status": {
-                  "type": "boolean",
-                  "example": false
-                }
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "todo": {
+                "type": "string",
+                "example": "aa"
+              },
+              "date": {
+                "type": "date",
+                "example": "2018-10-30"
+              },
+              "priority": {
+                "type": "integer",
+                "example": 1
+              },
+              "status": {
+                "type": "boolean",
+                "example": false
               }
             }
           }
-        ],
+        }],
         "responses": {
           "200": {
             "description": "User is updated",
@@ -236,14 +228,12 @@
         "tags": [
           "posts"
         ],
-        "parameters": [
-          {
-            "name": "_id",
-            "in": "path",
-            "type": "string",
-            "default": "aaaaa"
-          }
-        ],
+        "parameters": [{
+          "name": "_id",
+          "in": "path",
+          "type": "string",
+          "default": "aaaaa"
+        }],
         "responses": {
           "200": {
             "description": "User is deleted",
@@ -260,14 +250,12 @@
         "tags": [
           "posts"
         ],
-        "parameters": [
-          {
-            "name": "_id",
-            "in": "path",
-            "type": "string",
-            "default": "aaaaa"
-          }
-        ],
+        "parameters": [{
+          "name": "_id",
+          "in": "path",
+          "type": "string",
+          "default": "aaaaa"
+        }],
         "responses": {
           "200": {
             "description": "User is deleted",
@@ -282,8 +270,7 @@
         "tags": [
           "posts"
         ],
-        "parameters": [
-          {
+        "parameters": [{
             "name": "_id",
             "in": "path",
             "type": "string",
@@ -330,14 +317,12 @@
         "tags": [
           "posts"
         ],
-        "parameters": [
-          {
-            "name": "_id",
-            "in": "path",
-            "type": "string",
-            "default": "aaaaa"
-          }
-        ],
+        "parameters": [{
+          "name": "_id",
+          "in": "path",
+          "type": "string",
+          "default": "aaaaa"
+        }],
         "responses": {
           "200": {}
         }
@@ -371,26 +356,24 @@
         "tags": [
           "keywords"
         ],
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "keywords": {
-                  "type": "array",
-                  "example": "aa"
-                },
-                "date": {
-                  "type": "date",
-                  "example": "2018-10-30"
-                }
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "keywords": {
+                "type": "array",
+                "example": "aa"
+              },
+              "date": {
+                "type": "date",
+                "example": "2018-10-30"
               }
             }
           }
-        ],
+        }],
         "responses": {
           "200": {}
         }
@@ -402,14 +385,175 @@
         "tags": [
           "keywords"
         ],
-        "parameters": [
-          {
-            "name": "keywords",
+        "parameters": [{
+          "name": "keywords",
+          "in": "path",
+          "type": "string",
+          "default": "야식"
+        }],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses": {
+      "get": {
+        "summary": "내가 등록한 정류장 보기",
+        "tags": [
+          "busses"
+        ],
+        "responses": {
+          "200": {}
+        }
+      },
+      "post": {
+        "summary": "정류장 생성",
+        "tags": [
+          "busses"
+        ],
+        "parameters": [{
+          "name": "body",
+          "in": "body",
+          "required": true,
+          "schema": {
+            "type": "object",
+            "properties": {
+              "name": {
+                "type": "text",
+                "example": "한서병원"
+              }
+            }
+          }
+        }],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses/create": {
+      "get": {
+        "summary": "정류장 등록 페이지 생성",
+        "tags": [
+          "busses"
+        ],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses/busStops": {
+      "get": {
+        "summary": "등록한 정류장 버스 도착 정보",
+        "tags": [
+          "busses"
+        ],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses/busStop": {
+      "get": {
+        "summary": "정류장 버스 도착 정보 검색 페이지 호출",
+        "tags": [
+          "busses"
+        ],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses/{busStopName}": {
+      "get": {
+        "summary": "정류장 버스 도착 정보 검색",
+        "tags": [
+          "busses"
+        ],
+        "parameters": [{
+          "name": "busStopName",
+          "in": "path",
+          "type": "string",
+          "default": "한서병원"
+        }],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses/{_id}/edit": {
+      "get": {
+        "summary": "정류장 정보 수정 페이지 호출",
+        "tags": [
+          "busses"
+        ],
+        "parameters": [{
+          "name": "_id",
+          "in": "path",
+          "type": "string",
+          "default": "aaaa"
+        }],
+        "responses": {
+          "200": {}
+        }
+      }
+    },
+    "/busses/{_id}": {
+      "get": {
+        "summary": "정류장 상세 정보 페이지 호출",
+        "tags": [
+          "busses"
+        ],
+        "parameters": [{
+          "name": "_id",
+          "in": "path",
+          "type": "string",
+          "default": "aaaa"
+        }],
+        "responses": {
+          "200": {}
+        }
+      },
+      "put": {
+        "summary": "정류장 정보 수정",
+        "tags": [
+          "busses"
+        ],
+        "parameters": [{
+            "name": "_id",
             "in": "path",
             "type": "string",
-            "default": "야식"
+            "default": "aaaa"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "text",
+                  "example": "한서병원"
+                }
+              }
+            }
           }
         ],
+        "responses": {
+          "200": {}
+        }
+      },
+      "delete": {
+        "summary": "정류장 정보 삭제",
+        "tags": [
+          "busses"
+        ],
+        "parameters": [{
+          "name": "_id",
+          "in": "path",
+          "type": "string",
+          "default": "aaaa"
+        }],
         "responses": {
           "200": {}
         }
@@ -460,6 +604,24 @@
         },
         "status": {
           "type": "boolean",
+          "uniqueItems": true
+        },
+        "userId": {
+          "type": "string"
+        }
+      }
+    },
+    "Bus": {
+      "required": [
+        "name"
+      ],
+      "properties": {
+        "_id": {
+          "type": "string",
+          "uniqueItems": true
+        },
+        "name": {
+          "type": "string",
           "uniqueItems": true
         },
         "userId": {
